# assistant-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
classes/: __init__.py  address_book.py  fields.py  note_book.py  notes.py  repositories.py
commands/: __init__.py  birthdays.py  contacts.py  notes.py  system.py
helpers/: __init__.py  decorators.py  menu.py  parsers.py  storage.py  tables.py
helpers/menu/: __init__.py  contacts.py  notes.py  utils.py
tests/: test_main.py
